cabal-version:       >=1.10
name:                tools
synopsis:            Tools for ircbrowse
version:             0.1.0.0
license:             MIT
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple

executable tokenise
  main-is:             tokenise.hs
  other-modules:
  build-depends:       base >= 4.13 && < 4.15,
                       bytestring,
                       containers
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
